Add iPad SVG line animation

--- a/fly_in_disappear/index.html
+++ b/fly_in_disappear/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+<h1>Fly in text and disappear slowly</h1>
+<div id="animation-wrapper">
   <ul class="fly-in-text hidden disappear-text">
   	<li>H</li>
   	<li>E</li>
@@ -16,6 +19,7 @@
   	<li>O</li>
   	<li>!</li>
   </ul>
+</div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
