--- a/ipad svg line animation/index.html
+++ b/ipad svg line animation/index.html
@@ -21,15 +21,12 @@
         fill: none;
         stroke: #fff;
         stroke-miterlimit: 10;
-         -webkit-animation:dash 2s linear forwards;
-        -o-animation:dash 2s linear forwards;
-        -moz-animation:dash 2s linear forwards;
-        -webkit-animation:dash 2s linear forwards;
         animation:dash 2s linear forwards;
       }
 
       .cls-2 {
         stroke-width: 0.5px;
+        animation:dash 35s linear forwards;
       }
       
      @keyframes dash{
@@ -48,9 +45,13 @@
   <text x="128.5" y="7.04"/>  <text x="128.5" y="7.04"/>  <path class="cls-1" d="M204.2,277H18.6A13.36,13.36,0,0,1,5.3,263.7V17.5A13.36,13.36,0,0,1,18.6,4.2H204.3a13.36,13.36,0,0,1,13.3,13.3V263.8A13.49,13.49,0,0,1,204.2,277Z" transform="translate(128.5 7.04)"/>
   <path class="cls-1" d="M203,248.7H20.2a2.48,2.48,0,0,1-2.5-2.5V23.1a2.48,2.48,0,0,1,2.5-2.5H203a2.48,2.48,0,0,1,2.5,2.5V246.2A2.54,2.54,0,0,1,203,248.7Z" transform="translate(128.5 7.04)"/>
   <path class="cls-2" d="M115.8,268.8h-7.7a3.22,3.22,0,0,1-3.2-3.2v-4.3a3.22,3.22,0,0,1,3.2-3.2h7.7a3.22,3.22,0,0,1,3.2,3.2v4.3A3.16,3.16,0,0,1,115.8,268.8Z" transform="translate(128.5 7.04)"/>
-  <text x="128.5" y="7.04"/></svg>
+  <text x="128.5" y="7.04"/>
+  </svg>
   </object>
 </div>
+
+
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
