--- a/image_come_off_when_hover_ transition/index.html
+++ b/image_come_off_when_hover_ transition/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Transition</title>
+	<title>CSS Transition</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 <h1>Hover the image</h1>
-<div class="trigger">
-<div class="box"></div>
+
+<div class="container">
+	<div class="underlay">
+		<div class="box"></div>
+	</div>
 </div>
+
 </body>
 </html>
